samples/_failures_safe/1761331093_385fe9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2407af4c.c: In function ‘next_token’:
./samples/SAFE/__tmp_2407af4c.c:152:9: error: expected expression at end of input
  152 |         if (
      |         ^~
./samples/SAFE/__tmp_2407af4c.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2407af4c.c:152:9: error: expected declaration or statement at end of input
